fix secondary nav width on mobile

--- a/sites/all/themes/project/less/custom.less
+++ b/sites/all/themes/project/less/custom.less
@@ -79,6 +79,8 @@
     #header-top-second {
       float: none !important;
       .menu.nav.secondary {
+        margin-left: 0;
+        margin-right: 0;
         > li {
           display: inline-block;
           width: 32%;
